tests/ui/tuple/index-invalid.stderr
error[E0609]: no field `1` on type `(((),),)`
  --> $DIR/index-invalid.rs:2:22
   |
LL |     let _ = (((),),).1.0;
   |                      ^ unknown field
   |
   = note: available field is: `0`

error[E0609]: no field `1` on type `((),)`
  --> $DIR/index-invalid.rs:4:24
   |
LL |     let _ = (((),),).0.1;
   |                        ^ unknown field
   |
   = note: available field is: `0`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0609`.
